i worked on the nav bar

--- a/Bookmark-landing-Page-Group-A/index.html
+++ b/Bookmark-landing-Page-Group-A/index.html
@@ -10,6 +10,26 @@
 <body>
     <!-- <main class="flex-column"> -->
     <!-- Section 1 -->
+
+    <nav>
+        <div class="navbar">
+            <div class="nav-logo">
+               <a href="#"><img src="./images/logo-bookmark.svg" alt="logo-bookmark">
+               </a> 
+            </div>
+            <div class="text">
+                <ul>
+                    <li><a href="#">FEATURES</a></li>
+                    <li><a href="#">PRICING</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">LOGIN</a></li>
+                   
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
     <section class="first-layout">
         <div class="flex-column">
             <h1>A Simple Bookmark Manager</h1>
@@ -22,7 +42,7 @@
         </div>
         <div class="overlay">
             <div class="shape"></div>
-            <img src="./images/illustration-hero.svg" alt="illustration-hero">
+            <img class="larny" src="./images/illustration-hero.svg" alt="illustration-hero">
             
         </div>
 
